--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Shippori+Antique+B1&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
       integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
@@ -22,6 +28,12 @@
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
@@ -40,15 +52,16 @@
         </ul>
       </nav>
     </div>
-    <section class="about">
+    <section class="home">
       <div class="main">
-        <div class="about-text">
-          <h4>Hello! My name is</h4>
+        <div class="home-text">
+          <h4>Hey! My name is</h4>
           <h1>Atif Zawad Bakshi</h1>
           <h3>I am a Developer</h3>
         </div>
       </div>
     </section>
+    <section
 
     <!---ABOUT----->
   </body>
